--- a/primer/primer.ipynb
+++ b/primer/primer.ipynb
@@ -422,7 +422,7 @@
     "      max_key = key\n",
     "  if max_key == None:\n",
     "    return \"Empty list\"\n",
-    "  return max_key"
+    "  return max_ke"
    ]
   },
   {
