Finished search, working on Mapping

--- a/education/education.ipynb
+++ b/education/education.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "d18247e6-b23c-4ffd-8421-ec89da23e65c",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "6daf0ee3-1076-48d1-8ee3-219364c53966",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        "[214 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e10ab3b1-7f74-4a2b-95f2-e1dce4486847",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "92.9"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "5dc4dde8-5378-49a3-b576-fb93b97b9c31",
    "metadata": {},
    "outputs": [
@@ -343,13 +343,26 @@
        "Name: Total, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def compare_bachelors_year(data, year):\n",
+    "    '''\n",
+    "    Finds the percentages of M/F 25 to 29 year-olds who ahieved at least a\n",
+    "    bachelor's degree in the given year\n",
+    "\n",
+    "    Arguments:\n",
+    "        - data: pandas dataframe that contains info about M/F 25-29 y/o, their\n",
+    "                race, and the minimum degree they obtained\n",
+    "        - year: the year we are filtering by in data\n",
+    "\n",
+    "    Return:\n",
+    "        - two-row Series that indicates the percentages of M/F 25-29 y/o who\n",
+    "          achieved at least a bachelor's degree in the given year\n",
+    "    '''\n",
     "    # Initialize an empty Series to hold the result with the correct MultiIndex\n",
     "    output_index = pd.MultiIndex.from_product([[year], ['M', 'F'], [\"bachelor's\"]], names=['Year', 'Sex', 'Min degree'])\n",
     "    output = pd.Series(index=output_index)\n",
@@ -383,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "id": "7646f4da-147e-44cd-8f87-a039be07b73c",
    "metadata": {},
    "outputs": [
@@ -398,13 +411,29 @@
        "Name: Total, dtype: float64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def mean_min_degrees(data, start_year=None, end_year=None, category=\"Total\"):\n",
+    "    '''\n",
+    "    Finds the average percentage of educational attainment for people of the\n",
+    "    given category between the start year and end year with the sex A\n",
+    "\n",
+    "    Arguments:\n",
+    "        - data: pandas dataframe that contains info about M/F 25-29 y/o, their\n",
+    "                race, and the minimum degree they obtained\n",
+    "        - start_year: the beginning of the range. defaults to None\n",
+    "        - end_year: the end of the year range. defaults to None\n",
+    "        - category: the category to index\n",
+    "\n",
+    "    Return:\n",
+    "        - two-row Series that indicates the percentages of M/F 25-29 y/o who\n",
+    "          achieved at least a bachelor's degree in the given year\n",
+    "    '''\n",
+    "\n",
     "    if start_year is None:\n",
     "        start_year = data.index.get_level_values('Year').min()\n",
     "    if end_year is None:\n",
@@ -445,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "id": "3d585d71-c3ef-4840-a3ee-b283c9bc0674",
    "metadata": {},
    "outputs": [
@@ -460,7 +489,7 @@
        "Name: Pacific Islander, dtype: float64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 19,
    "id": "58d771b6-57a5-46c8-a760-d3c917219e76",
    "metadata": {},
    "outputs": [
@@ -498,6 +527,18 @@
    ],
    "source": [
     "def line_plot_min_degree(data, min_degree):\n",
+    "    '''\n",
+    "    Finds the total percentage for sex A with the specified min degree over\n",
+    "    each year in the dataset\n",
+    "\n",
+    "    Arguments:\n",
+    "        - data: pandas dataframe that contains info about M/F 25-29 y/o, their\n",
+    "        - min_degree: the min_degree to look for\n",
+    "\n",
+    "    Return:\n",
+    "        - sns.relplot that produces a plot that finds percentages for sex A\n",
+    "          with the specified min degree over each year\n",
+    "    '''\n",
     "    filtered_data = data.loc[(slice(None), \"A\", min_degree), \"Total\"].reset_index()\n",
     "    plot = sns.relplot(data=filtered_data, x=\"Year\", y=\"Total\", kind=\"line\", height=5, aspect=1.5)\n",
     "    plot.set_xlabels(\"Year\")\n",
@@ -532,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 20,
    "id": "030e2c2a-3233-4cf7-862f-043ca428c941",
    "metadata": {},
    "outputs": [
@@ -549,7 +590,18 @@
    ],
    "source": [
     "def bar_plot_high_school_compare_sex(data, year):\n",
-    "    # filtered_data = data.loc[(slice(None), \"A\", min_degree), \"Total\"].reset_index()\n",
+    "    '''\n",
+    "    Compare the total percentages of Sex, A, M, and F with high school as the\n",
+    "    min degree in the given year\n",
+    "\n",
+    "    Arguments:\n",
+    "        - data: pandas dataframe that contains info about M/F 25-29 y/o, their\n",
+    "        - min_degree: the year too evaluate\n",
+    "\n",
+    "    Return:\n",
+    "        - sns.catplot (bar plot) that compares the total percentages of Sex, A,\n",
+    "          M, and F with high school min degree\n",
+    "    '''\n",
     "    filtered_data = data.loc[(year, slice(None), 'high school'), 'Total'].reset_index()\n",
     "    filtered_data.columns = ['Year', 'Sex', 'Min degree', 'Total']\n",
     "\n",
@@ -619,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 21,
    "id": "c91ef64e-5d23-41c7-8a06-651765552bc1",
    "metadata": {},
    "outputs": [
@@ -636,7 +688,19 @@
    ],
    "source": [
     "def plot_race_compare_min_degree(data, category):\n",
-    "  # data.loc[(2018, \"A\", \"high school\"), \"Total\"]\n",
+    "  '''\n",
+    "  Compare each of the 4 Min degree options indicating the percentage of\n",
+    "  educational attainment for the given racial category over the whole range of\n",
+    "  data\n",
+    "\n",
+    "  Arguments:\n",
+    "      - data: pandas dataframe that contains info about M/F 25-29 y/o, their\n",
+    "      - min_degree: the min_degree to analyze\n",
+    "\n",
+    "  Return:\n",
+    "      - sns plotting function that best visualizes the comparison between\n",
+    "        each of the 4 min degree options\n",
+    "  '''\n",
     "  filtered_data = data.loc[(slice(None), \"A\", slice(None)), category].reset_index()\n",
     "\n",
     "  plot = sns.relplot(data=filtered_data, x=\"Year\", y=filtered_data[category], hue=\"Min degree\", kind='line')\n",
@@ -696,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 22,
    "id": "e7ba52b5-8509-4e9d-bd69-6d0cee574fb0",
    "metadata": {},
    "outputs": [
@@ -713,6 +777,17 @@
    ],
    "source": [
     "def line_plot_compare_race(data, min_degree):\n",
+    "    '''\n",
+    "    Finds the national attainment of education by race\n",
+    "\n",
+    "    Arguments:\n",
+    "        - data: pandas dataframe that contains info about M/F 25-29 y/o, their\n",
+    "        - min_degree: the minimum degree that each race accomplishes\n",
+    "\n",
+    "    Return:\n",
+    "        - sns plotting function that best visualizes the attainment of\n",
+    "          min_degree for all the races\n",
+    "    '''\n",
     "    filtered_data = data.loc[(slice(2009, None), \"A\", min_degree), :].reset_index()\n",
     "    melt = pd.melt(filtered_data, id_vars=[\"Year\", \"Sex\", \"Min degree\"],\n",
     "                          value_vars=['Black', \"White\", \"Hispanic\", \"Asian\", \"Pacific Islander\", \"American Indian/Alaska Native\"],\n",
@@ -764,22 +839,22 @@
    "id": "e6a24074-3709-4cb4-8e0b-7a8a22504992",
    "metadata": {},
    "source": [
-    "*Replace this text with your answer.*"
+    "Using the title \"Asian educational attainment reaches new heights\" really enforces a misleading or incomplete narrative. It implies that the success of one racial group represents some progress over racial equity. It makes the reader look past disparities and challenges faced by other racial groups, potentially minimizing the significance of systemic issues that hinder educational attainment for Black, Hispanic, Indigenous, and other non-Asian minorities."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 23,
    "id": "8d392db6-fea5-4d90-b60d-d6bb0ae52cb6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x28b45984100>"
+       "<seaborn.axisgrid.FacetGrid at 0x19232525000>"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
